# shiny-broccoli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  docker-compose.yml.example  entrypoint.sh  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 1747990fe23d_create_entries_table_and_charts_table.py  401473568012_update_result_column_of_entry_to_be_str_.py  475883def8b6_create_code_field_for_charts_table.py  5475a2c530ee_setting_unique_of_entry_table_result_to_.py  573c3ebd62a8_add_result_column_to_entry_model.py  714ea49bbd33_delete_chart_column_from_entry_model.py  832865180441_set_chart_uuid_of_entry_table_to_be_.py  91b5870abce5_password_field_in_users_table.py  9bc2f54bdd38_update_base_model_class.py  e64d84cb37c1_add_cascade_option_to_entries_column_in_.py  f32f561a3155_setting_init_of_chart_uuid_of_entry_to_.py  f55ed7705cc4_add_chart_column_to_entry_table.py  f739f3aa8942_add_dice_column_to_chart_table.py  f74668217812_init_users_table.py
app/: __init__.py  ai_responder.py  app.py  classifier.py  config.py  database.py  schemas.py  security.py  settings.py
app/assets/: charts.csv  email_dataset.csv  entries.csv
app/models/: base.py  charts.py  users.py
app/routers/: auth.py  charts.py  users.py
app/schemas/: charts.py  misc.py  users.py
app/templates/: index.html  result.html
app/utils/: messages.py  mixins.py
exemplos/: emails_exemplo.txt
static/: style.css
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_charts.py  test_db.py  test_security.py  test_users.py
trainment/: data.py  preprocessing.py  trainer.py
