[tool.poetry]
name = "shiny-broccoli"
version = "0.1.0"
description = ""
authors = ["mateosvilasboas <mateuscamposdantas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
python-multipart = "^0.0.20"
jinja2 = "^3.1.6"
huggingface-hub = "^0.34.4"
python-dotenv = "^1.1.1"
transformers = {extras = ["torch"], version = "^4.56.0"}
torch = "^2.8.0"
datasets = "^4.0.0"
pandas = "^2.3.2"
scikit-learn = ">=1.3.0"
google-generativeai = "^0.8.5"
markdown = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest = "^8.4.1"
taskipy = "^1.14.1"
ruff = "^0.12.11"

[tool.poetry.group.gpu.dependencies]
torch = "^2.8.0"
torchvision = "^0.23.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.ruff]
line-length = 79
extend-exclude = ['alembic']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
ignore = ["E501"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uvicorn app.app:app --reload --host 0.0.0.0 --port 8000'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[build-system]
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"
